add:更改为左侧布局

--- a/source/_data/languages.yml
+++ b/source/_data/languages.yml
@@ -9,7 +9,7 @@ zh-CN:
     archives: 全部文章
     categories: 分类
     tags: 标签
-    about: 关于
+    about: 关于本站
     search: 搜索
     schedule: 日程表
     sitemap: 站点地图
